Fixed issue where logout button in control links was misaligned when a user had an item in their inbox.

--- a/ISS/static-src/src/base/base.less
+++ b/ISS/static-src/src/base/base.less
@@ -185,6 +185,7 @@ a {
           border: none;
           background-color: @bg_dark;
           cursor: pointer;
+          height: 100%;
 
           &:hover {
             background-color: @bg_light;
